--- a/css/forms.css
+++ b/css/forms.css
@@ -18,35 +18,35 @@ form>div {
     font-style:italic;
     font-size:70%;
     font-weight:bold;
-    color:#f00;
+    color:rgb(255, 136, 0);
 }
 
 input:required {
-      border: 1px solid red;
+      border: 1px solid rgb(255, 145, 0);
 }
 
 input:optional, textarea:optional {
-     background-color:#f1f1f1;
-     border:1px solid #ccc;
+     background-color:#f1f1f1d3;
+     border:1px solid #f0dddd;
 }
 
 input[type="submit"], input[type="button"] {
-  background-color: #fff;
+  background-color: #aba2a2;
   border-radius: 4px;
-  border: solid 1px #ccc;
+  border: solid 1px #cdb6b6;
   padding: 0.3em 0.5em;
 }
 
 fieldset {
-  border: 1px solid #ccc;
+  border: 1px solid #c0aaaa;
   max-width: 350px;
 }
 
 legend {
   margin-left: 0.5em;
   padding: 0.2em 0.5em;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
+  border-left: 1px solid #e4cbcb;
+  border-right: 1px solid #dfcaca;
 }
 
 /* end reCAPTCHA styles */
