--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,30 @@
 /* Global rules */
 
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
+@import url('https://fonts.googleapis.com/css2?family=BioRhyme:wght@600;700&family=Chivo:ital,wght@1,200&display=swap');
+
 
 html {
-    background-color: lightgray;
-    font-family: 'Quicksand', sans-serif;
+    background-color: #9aa4ec;
+
+    font-family: 'Chivo', ExtraLight 200 Italic;
     font-size: 0.95em;
     line-height: 1.5em;
 }
 
 ::selection {
-    color: #000; 
-    background: #ff0;
+    color: #0000002c; 
+    background:#F2F1EF;
 }
 
 h1 {
     font-weight: normal;
     margin: auto;
-    background: #fff;
+    background: #948383;
     line-height: 2.5em;
 }
 
 main.wrapper {
-    background-color: white;
+    background-color: rgb(186, 178, 178);
     overflow: auto;
 }
 
